adds openapi embedding generator
